# jformat

./: CMakeLists.txt  LICENSE  README.md  fmt.h  fmt_test.cpp  format.h  format_test.cpp  logtracer_test.cpp
include/: fmt.h  format.h  logtracer.h
src/: logtracer.cpp
tests/: fmt_test.cpp  format_test.cpp  logtracer_test.cpp
